Including character attributes